# Scientific-Programming-Exercises

./: .gitignore  CMakeLists.txt  README.md
1.data-fitting/: CMakeLists.txt  main.cpp  readme.txt
2.systems-linear-equations/: CMakeLists.txt
3.data-smoothing/: CMakeLists.txt  data_smoothing.sh  readme.txt
4.function-approximation/: consoleOutput.txt  function_approximation.sh
4.function-approximation/report/: report.aux  report.tex  report.toc
6.numerical-integration/: CMakeLists.txt  consoleSampleOutput.txt  readme.txt
6.numerical-integration/report/: report.aux  report.toc
reeks1/: createImages.sh
reeks1/report/: report.aux  report.out  report.tex  report.toc  title_page.tex
reeks2/: CMakeLists.txt  extra  functions.cpp  functions.h  main.cpp  readme.txt
reeks2/report/: report.aux  report.out  report.tex  report.toc  title_page.tex
reeks3/: CMakeLists.txt  createImages.sh  data_smoothing.sh  main.cpp  readme.txt
reeks3/report/: .report.tex.swp  report.aux  report.out  report.tex  report.toc  title_page.tex
reeks4/: CMakeLists.txt  main.cpp  readme.txt
reeks4/report/: title_page.tex
reeks6/: CMakeLists.txt  main.cpp
reeks6/report/: report.out  report.tex  title_page.tex  title_page.tex.aux
second-session/: CMakeLists.txt
second-session/1/: CMakeLists.txt  functions.cpp  main.cpp
second-session/1.systems-linear-equations/: CMakeLists.txt  functions.cpp  functions.h  main.cpp
second-session/1.systems-linear-equations/report/: report.aux  report.tex  report.toc  title_page.tex
second-session/2/: CMakeLists.txt
second-session/2.data-fitting/: CMakeLists.txt  main.cpp
second-session/2.data_fitting_smoothing_and_fn_approx/: CMakeLists.txt  createImages.sh  functions.cpp  functions.h  main.cpp  readme.txt
second-session/2.data_fitting_smoothing_and_fn_approx/report/: report.tex  title_page.tex
second-session/3/: CMakeLists.txt
second-session/3.numerical-integration/: CMakeLists.txt
second-session/3.numerical-integration/maple/: mapleSolution.txt
second-session/3.numerical-integration/matlab/: compositeTrap.m  compositeTrap2.m  f.m  gaussLegendre.m  getCompositeTrapeziumN.m  monteCarloIntegration.m  monteCarloIntegration2.m  solution.m  solution.txt  solutionExampleOutput.txt
second-session/3.numerical-integration/report/: report.tex  title_page.tex
